// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexView should render with correct props 1`] = `
<main
  className="index"
>
  <h1
    className="index__header"
  >
    Todo app
  </h1>
  <label
    htmlFor="newtodo"
  >
    Add new todo
  </label>
  <input
    className="index__input"
    name="newtodo"
    onChange={[Function]}
    type="text"
  />
  <Button
    click={[Function]}
    text="Add"
  />
  <br />
</main>
`;

exports[`IndexView should render with correct props 2`] = `
<main
  className="index"
>
  <Loader />
  <h1
    className="index__header"
  >
    Todo app
  </h1>
  <label
    htmlFor="newtodo"
  >
    Add new todo
  </label>
  <input
    className="index__input"
    name="newtodo"
    onChange={[Function]}
    type="text"
  />
  <Button
    click={[Function]}
    text="Add"
  />
  <br />
  <TodoComponent
    setDone={[Function]}
    todo={
      Todo {
        "done": false,
        "number": 0,
        "setDone": [Function],
        "title": "title",
      }
    }
  />
  <TodoComponent
    setDone={[Function]}
    todo={
      Todo {
        "done": true,
        "number": 1,
        "setDone": [Function],
        "title": "testing",
      }
    }
  />
</main>
`;
